--- a/app/src/main/res/menu/menu_option.xml
+++ b/app/src/main/res/menu/menu_option.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_search"
+        android:id="@+id/action_option_search"
         android:icon="@drawable/ic_search"
         android:title="@string/hint_search_username"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|ifRoom" />
 
     <item
-        android:id="@+id/action_setting"
+        android:id="@+id/action_option_setting"
         android:icon="@drawable/ic_setting"
         android:title="@string/label_setting"
         app:showAsAction="always" />
