Reminder with sharedPreference implemented
Signed-off-by: Pradipta Priya Adyatmika <pradiptapaa@gmail.com>

--- a/app/src/main/res/navigation/nav_search.xml
+++ b/app/src/main/res/navigation/nav_search.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_searchUserFragment_to_searchUserDetailsFragment"
             app:destination="@id/searchUserDetailsFragment" />
+        <action
+            android:id="@+id/action_searchUserFragment_to_settingFragment"
+            app:destination="@id/settingFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchUserDetailsFragment"
@@ -23,4 +26,9 @@
             android:name="username"
             app:argType="string" />
     </fragment>
+    <fragment
+        android:id="@+id/settingFragment"
+        android:name="id.co.ppa_github.ui.setting.SettingFragment"
+        android:label="SettingFragment"
+        tools:layout="@layout/layout_setting" />
 </navigation>
