--- a/ppa_github_favorite/src/main/res/layout/layout_rv.xml
+++ b/ppa_github_favorite/src/main/res/layout/layout_rv.xml
@@ -10,7 +10,7 @@
 
     <include
         android:id="@+id/search_user_include_no_data"
-        layout="@layout/include_no_data"
+        layout="@layout/include_no_data_"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
