Renaming layout item_loading_.xml + change login to name in FavoriteDetailsFragment.kt and SearchUserDetailsFragment.kt
Signed-off-by: Pradipta Priya Adyatmika <pradiptapaa@gmail.com>

--- a/app/src/main/res/layout/layout_splash.xml
+++ b/app/src/main/res/layout/layout_splash.xml
@@ -31,7 +31,7 @@
     </androidx.cardview.widget.CardView>
 
     <include
-        layout="@layout/item_loading"
+        layout="@layout/item_loading_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
