--- a/app/src/main/res/layout/include_user_details.xml
+++ b/app/src/main/res/layout/include_user_details.xml
@@ -9,7 +9,7 @@
     android:padding="8dp">
 
     <include
-        layout="@layout/item_loading"
+        layout="@layout/item_loading_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
