--- a/app/src/main/res/layout/layout_rv.xml
+++ b/app/src/main/res/layout/layout_rv.xml
@@ -10,7 +10,7 @@
 
     <include
         android:id="@+id/search_user_include_loading"
-        layout="@layout/item_loading"
+        layout="@layout/item_loading_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
