--- a/app/src/main/res/layout/layout_user_details.xml
+++ b/app/src/main/res/layout/layout_user_details.xml
@@ -11,7 +11,7 @@
 
         <include
             android:id="@+id/user_details_include_loading"
-            layout="@layout/item_loading"
+            layout="@layout/item_loading_"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
